# rolldown-plugin-dts

./: .editorconfig  .gitignore  .prettierignore  README.md  dts.snapshot.json  eslint.config.js  jsr.json  package.json  performance-issue.md  pnpm-lock.yaml  pnpm-workspace.yaml  repomix-output.xml  rolldown.config.ts  tsconfig.json  tsdown.config.ts  vitest.config.ts
.github/workflows/: issue-close-require.yml  lock-closed-issues.yml  needs-reproduction.yml  release-commit.yml  release-jsr.yml  release.yml  unit-test.yml
__snapshots__/tsnapi/: index.snapshot.d.ts  index.snapshot.js  internal.snapshot.d.ts  internal.snapshot.js  tsc.snapshot.d.ts  tsc.snapshot.js
crate/: Cargo.toml  index.d.ts  package.json
crate/src/: lib.rs
src/: banner.ts  custom-language.ts  debug.ts  dts-input.ts  fake-js.ts  filename.ts  generate.ts  index.ts  internal.ts  options.ts  resolve.ts  resolver.ts  shims.d.ts  static-file.ts  tsgo.ts  types.d.ts  utils.ts  volar.ts
src/tsc/: context.ts  emit-build.ts  emit-compiler.ts  index.ts  load-tsc.ts  program.ts  require-tsc.ts  resolver.ts  system.ts  transformer.ts  ts-macro.ts  types.ts  utils.ts  volar.ts  vue.ts  worker.ts
src/utils/: ast.ts  filename.ts  magic-string.ts  tsc-system.ts  tsc-worker.ts  tsc.ts  vue.ts
tests/: context.test.ts  custom-language.test.ts  index.test.ts  isolated-decl.test.ts  resolve.test.ts  rollup-plugin-dts.test.ts  source-map.test.ts  tsc.test.ts  utils.test.ts  utils.ts  volar.test.ts  watch.propagation.test.ts
tests/__snapshots__/: custom-language.test.ts.snap  index.test.ts.snap  (+6 more)
(+544 files in other folders)
